--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,13 @@
     <string name="profile_icon">Profile</string>
     <string name="toolbar_main">FlashCard</string>
 
+
+    <!-- Todas as mensagens erro -->
+    <string name="msg_error_no_connection">Não há conexão com a internet. Por favor verifique e tente novamente!</string>
+    <string name="msg_error_no_server">Houve um erro ao tentar conectar-se ao servidor!</string>
+    <string name="msg_erro_exception_timed_out">Não foi possível conectar ao servidor, devido ao tempo de espera!</string>
+    <string name="msg_erro_communication">Não foi possível conectar-se com o servidor!</string>
+    <string name="msg_erro_unknown_communication">Não foi possível obter o erro ocorrido com o servidor!</string>
+
+
 </resources>
